--- a/src/app/consumidor/tab_inicio/inicio/inicio.page.html
+++ b/src/app/consumidor/tab_inicio/inicio/inicio.page.html
@@ -17,17 +17,17 @@
     <!-- Contenedor 2 -->
     <div class="contenedor-title">
       <div>
-        <h4 class="text-center size-text35px text-bold text-color-purple">Selecciona el lugar</h4>
+        <h4 class="text-center size-text35px text-bold text-color-purple">Movilidad de las vendedoras</h4>
       </div>
     </div>
   </div>
-  <div class="container-item-tipo-user">
+ <!--  <div class="container-item-tipo-user"> -->
     <!-- <ion-row> -->
     <!-- <ion-col style="margin-top: 8px;">
       <ion-label class="color-text-purple bold-text">Seleccionaaa el lugar</ion-label> 
     </ion-col>
     <ion-col> -->
-    <div>
+<!--     <div>
       <ion-item lines="none" class="input-border-bot item-native-transparency">
         <ion-label style=" color: var(--warmin-color-purple);" position="floating" class="texto-center text-bold">
           Tipo de Usuario </ion-label>
@@ -37,10 +37,10 @@
           <ion-select-option class="selec-text" value="bananas">Ferias</ion-select-option>
         </ion-select>
       </ion-item>
-    </div>
+    </div> -->
     <!-- </ion-col> -->
     <!-- </ion-row> -->
-  </div>
+ <!--  </div> -->
 
   <!-- <ion-card style="width: 95%; height: 70%;">
     <app-googlemaps [modal]="modal" [localizacion]="localizacion" [feature]="feature"></app-googlemaps>
