--- a/src/app/ma_vendedora/componets/agricultoras/agricultoras.component.html
+++ b/src/app/ma_vendedora/componets/agricultoras/agricultoras.component.html
@@ -7,14 +7,17 @@
 
 <!-- List of people -->
 <div class="contenedor-personas">
-  <div *ngFor="let farmer of listFarmers" class="card" [routerLink]="['/consumidor/tab-inicial/perfil-ma',farmer.id]">
-    <div>
-      <img class="imagen-card" src="assets/img/MujerAgricultora1.webp" />
+  <div *ngFor="let farmer of listFarmers" class="card" [routerLink]="['/ma_vendedora/menu/productos/perfilma',farmer.id]">
+    <div *ngIf="farmer.photo != ''">
+      <ng-container  *ngFor="let item of farmer.photo">  
+        <img  class="imagen-card" src="{{item.url}}" />
+      </ng-container>      
     </div>
+    <div *ngIf="farmer.photo == ''"> <img class="imagen-card" src="assets/img/profileDefault.jpg" /></div>
     <div  class="detalle-personal">
       <div class="texto-personal text-bold text-color-purple">{{farmer.name}}</div>
       <div class="texto-personal text-color-purple">{{farmer.phone}}</div>
-      <div class="texto-personal text-color-purple">Direccion</div>
+      <div class="texto-personal text-color-purple">{{farmer.identification_card}}</div>
     </div>
   </div>  
 </div>
