--- a/src/app/ma_vendedora/tab-inicio/tab-inicio.page.html
+++ b/src/app/ma_vendedora/tab-inicio/tab-inicio.page.html
@@ -21,7 +21,7 @@
   </ion-card> -->
   <div class="center">
     <ion-card style="width: 282px; height: 410px">
-      <app-googlemaps [feature] = "feature"></app-googlemaps>
+      <app-googlemaps [modal]="modal" [feature] = "feature"></app-googlemaps>
     </ion-card>
   </div>
 
