--- a/src/app/c_privado/geolocalizacion-llegada/geolocalizacion-llegada.page.html
+++ b/src/app/c_privado/geolocalizacion-llegada/geolocalizacion-llegada.page.html
@@ -31,6 +31,55 @@
   </div>
 
   <div class="btn-ordenar">
-    <ion-button class="boton-warmi-in" (click)="registrarLlegada()">Continuar</ion-button>
+    <ion-button class="boton-warmi-in" id="open-modal">Continuar</ion-button>
   </div>
+
+  <ion-modal #modal trigger="open-modal" [presentingElement]="presentingElement">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+        
+          <ion-buttons slot="end">
+            <ion-button (click)="modal.dismiss()">Atrás</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      
+      <div class="border-top-page">
+        <!-- Contenedor 1 -->
+        <div class="contenedor-header">
+          <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/store.svg">
+          </ion-icon>
+          <div class="texto-header">Datos vehículo</div>
+        </div>
+      </div>
+      <ion-content>
+          <br>
+          <h4 class="text-center size-text35px text-bold text-color-purple">Ingresa los datos requeridos</h4>
+          <form>
+        <ion-list>
+          <ion-card>  
+            <ion-item>
+              <ion-label position="stacked" style="color: var(warmis-color-purple);">Placa:</ion-label>
+              <ion-input [(ngModel)]="car_plate" name="car_plate"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="stacked" class="text-color-purple">Descripción:</ion-label>
+              <ion-input [(ngModel)]="description" name="description"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="stacked"class="text-color-purple">Color:</ion-label>
+              <ion-input [(ngModel)]="color" name="color"></ion-input>
+            </ion-item>
+        
+          </ion-card>
+
+        </ion-list>   
+        <div class="btn-ordenar">
+          <ion-button type="submit" (click)="registrarLlegada()" class="boton-warmi-in"><ion-icon name="card-outline"></ion-icon>Guardar</ion-button>
+        </div>
+      </form>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 </ion-content>
