--- a/src/app/ma_vendedora/componets/compartido/compartido.component.html
+++ b/src/app/ma_vendedora/componets/compartido/compartido.component.html
@@ -1,26 +1,3 @@
-<!-- <ion-searchbar placeholder="Buscar" class="search-bar-orange" value=""></ion-searchbar> -->
-<!-- <div class="container-search-bar">
-  <div class="size-search-bar">
-    <ion-searchbar placeholder="Buscar" class="search-bar-orange" showCancelButton="never"></ion-searchbar>
-  </div>
-</div>
-
-<ion-card>
-
-  <ion-item *ngFor="let shared of shareds" style="font-size: 12px;" (click)="gotoProfile(shared.id)">
-    <ion-chip slot="end" color="success">{{shared.status}}</ion-chip>
-    <ion-thumbnail slot="start">
-      <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/demos/api/thumbnail/thumbnail.svg" />
-    </ion-thumbnail>
-    <ion-label>{{shared.users_id}}<p>{{shared.name}}</p>
-      <p>{{shared.meeting_point}}</p>
-      <p>{{shared.date}}
-      -- {{shared.hour}}</p>
-    </ion-label>
-  </ion-item>
-
-
-</ion-card> -->
 <div class="contenedor-busqueda">
   <div class="search">
     <ion-searchbar class="busqueda" placeholder="Buscar ..."  showCancelButton="never"></ion-searchbar>
@@ -42,3 +19,77 @@
     </ion-label>
   </ion-item>
 </ion-card>
+<ion-fab id="open-modal" vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab-button color="danger">
+    <ion-icon name="add-outline"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
+
+<ion-modal #modal trigger="open-modal" [presentingElement]="presentingElement">
+  <ng-template>
+    <ion-toolbar>
+        
+      <ion-buttons slot="end">
+        <ion-button (click)="modal.dismiss()">Cancelar</ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+    <div class="border-top-page">
+      <div class="contenedor-header">
+        <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/store.svg">
+        </ion-icon>
+        <div class="texto-header">Transporte compartido</div>
+      </div>
+    </div>
+    <ion-content>
+      <div class="contenedor-item">
+        <ion-icon slot="start" class="size-icon" src="/assets/icon/rol.svg"></ion-icon>
+        <ion-item lines="none" class="input-border-bot item-native-transparency">
+          <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">Nombre:
+          </ion-label>
+          <ion-input [(ngModel)]="name" type="text" [ngModelOptions]="{standalone: true}"
+            class="text-center"></ion-input>              
+        </ion-item>
+      </div>
+      <div class="contenedor-item">
+        <ion-icon slot="start" class="size-icon" src="/assets/icon/rol.svg"></ion-icon>
+        <ion-item lines="none" class="input-border-bot item-native-transparency">
+          <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">Punto de encuentro:
+          </ion-label>
+          <ion-input [(ngModel)]="meeting_point" type="text" [ngModelOptions]="{standalone: true}"
+            class="text-center"></ion-input>              
+        </ion-item>
+      </div>
+      <ion-card>
+        <ion-list class="items">
+          <ion-label style=" color: var(--warmin-color-purple);" position="floating" class="texto-center text-bold">* Selecciona la hora:
+          </ion-label>
+          <ion-select mode="ios" interface="popover" placeholder="Seleccione..."
+            [(ngModel)]="hour" [ngModelOptions]="{standalone: true}">
+            <ion-select-option value="08:00">08:00</ion-select-option>
+            <ion-select-option value="09:00">09:00</ion-select-option>
+            <ion-select-option value="10:00">10:00</ion-select-option>
+            <ion-select-option value="11:00">11:00</ion-select-option>
+            <ion-select-option value="12:00">12:00</ion-select-option>
+            <ion-select-option value="13:00">13:00</ion-select-option>
+            <ion-select-option value="14:00">14:00</ion-select-option>
+            <ion-select-option value="15:00">15:00</ion-select-option>
+            <ion-select-option value="16:00">16:00</ion-select-option>
+            <ion-select-option value="17:00">17:00</ion-select-option>
+          </ion-select>
+        </ion-list>
+      </ion-card>
+      <ion-item>
+        <div class="ion-padding" style="text-align:center;">
+          <ion-label class="text-color-purple text-bold">Selecciona la fecha:</ion-label>
+          
+          <ion-datetime [(ngModel)]="date" name="date" presentation="date">
+            <span slot="time-label">Hora</span>
+          </ion-datetime>
+        </div>
+      </ion-item>
+      <div class="btn-ordenar">
+        <ion-button type="submit" (click)="addShared()" expand="block" class="boton-warmi-in"><ion-icon name="card-outline"></ion-icon> Ordenar</ion-button>
+      </div>
+    </ion-content>
+  </ng-template>
+</ion-modal>
