modal listapersona mapa

--- a/src/app/c_privado/tab_inicio/perfil-ma/perfil-ma.page.html
+++ b/src/app/c_privado/tab_inicio/perfil-ma/perfil-ma.page.html
@@ -56,7 +56,7 @@
     </div>
   </div>
   <!--  -->
-  <ion-card style="width: 98%; height: 30%;">
+  <ion-card style="width: 98%; height: 30%;"> //corregir mapa de perfil
     <app-googlemaps [buscador]="buscador" [miUbicacion]="miUbicacion" [feature]="feature"></app-googlemaps>
   </ion-card>
 
