--- a/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.html
+++ b/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.html
@@ -68,12 +68,11 @@
   </div>
 
   <div class="center">
-    <ion-card style="width: 282px; height: 410px">
-      <app-googlemaps [buscador]="buscador" [miUbicacion]="miUbicacion" [feature]="feature"></app-googlemaps>
+    <ion-card style="width: 100%; height: 30vh;">
+      <app-googlemaps [buscador]="buscador"  [miUbicacion]="miUbicacion" [feature]="feature"></app-googlemaps>
     </ion-card>
   </div>
-
-
+  
   <div class="contenedor-list-ventas" id="contenedor-list-ventas">
     <ion-card class="contenedor-card-p">
       <ion-card-header class="encabezado-card">
