--- a/src/app/googlemaps/googlemaps/googlemaps.component.scss
+++ b/src/app/googlemaps/googlemaps/googlemaps.component.scss
@@ -32,8 +32,9 @@
 
 .map {
   display: block;
-  width: 282px;
-  height: 290px;
+  width: 97%;
+  height: 90%;
+  margin: auto;
 }
 
 .contenedor-ubicacion{
