--- a/src/app/ma_acopiadora/tab-crear-acopio/tab-crear-acopio.page.html
+++ b/src/app/ma_acopiadora/tab-crear-acopio/tab-crear-acopio.page.html
@@ -87,7 +87,7 @@
   <app-googlemaps [posicionEdit]="posicionEdit" [localizacion]="localizacion" (enviar)="recibirData($event)" [feature]="feature"></app-googlemaps>
 </ion-card> -->
   <div class="center">
-    <ion-card style="width: 282px; height: 410px">
+    <ion-card class="tam-map">
       <app-googlemaps [posicionEdit]="posicionEdit" [localizacion]="localizacion" (enviar)="recibirData($event)"
         [feature]="feature"></app-googlemaps>
     </ion-card>
