--- a/src/app/ma_lideresa/tab_invitaciones/lista/lista.page.html
+++ b/src/app/ma_lideresa/tab_invitaciones/lista/lista.page.html
@@ -36,7 +36,7 @@
     </div>
   </div>
 
-<ion-card style="width: 97%; height: 60%;">
+<ion-card class="tam-map">
   <app-googlemaps [posicionEdit]="posicionEdit" [buscador]="buscador" [miUbicacion]="miUbicacion" [feature]="feature"></app-googlemaps>
 </ion-card>
 
