--- a/src/app/ma_vendedora/componets/camioneta/camioneta.component.html
+++ b/src/app/ma_vendedora/componets/camioneta/camioneta.component.html
@@ -7,7 +7,7 @@
 <ion-button class="ion-padding boton-azul" class="boton-warmi-in" expand="block" (click)="viewCars()">  &nbsp; &nbsp;Ver camionetas</ion-button> -->
 
 <div class="center">
-  <ion-card style="width: 282px; height: 410px">
+  <ion-card class="tam-map">
     <app-googlemaps [modal]="modal"  [feature] = "feature"></app-googlemaps>
   </ion-card>
 </div>
