--- a/src/app/ma_vendedora/componets/privado/privado.component.html
+++ b/src/app/ma_vendedora/componets/privado/privado.component.html
@@ -13,7 +13,7 @@
     </div>
   </div> -->
 
-  <ion-card style="width: 97%; height: 575px;">
+  <ion-card class="tam-map">
     <app-googlemaps [feature]="feature"></app-googlemaps>
   </ion-card>
 </ion-content>
