--- a/src/app/ma_vendedora/tab-inicio/tab-inicio.page.html
+++ b/src/app/ma_vendedora/tab-inicio/tab-inicio.page.html
@@ -20,7 +20,7 @@
     <app-googlemaps [feature] = "feature"></app-googlemaps>
   </ion-card> -->
   <div class="center">
-    <ion-card style="width: 282px; height: 410px">
+    <ion-card class="tam-map">
       <app-googlemaps [feature] = "feature"></app-googlemaps>
     </ion-card>
   </div>
