--- a/src/app/c_bus/paradas/paradas.page.html
+++ b/src/app/c_bus/paradas/paradas.page.html
@@ -28,7 +28,7 @@
   </div>
 
   <div class="center">
-    <ion-card style="width: 282px; height: 410px">
+    <ion-card class="tam-map">
       <app-googlemaps [localizacion]="localizacion" (enviar)="recibirData($event)" [feature]="feature"></app-googlemaps>
     </ion-card>
   </div>
