--- a/src/app/c_bus/tab-inicio/tab-inicio.page.html
+++ b/src/app/c_bus/tab-inicio/tab-inicio.page.html
@@ -22,7 +22,7 @@
     <app-googlemaps [modal]="modal"  [feature] = "feature"></app-googlemaps>
   </ion-card> -->
   <div class="center">
-    <ion-card style="width: 282px; height: 410px">
+    <ion-card class="tam-map">
       <app-googlemaps [modal]="modal"  [feature] = "feature"></app-googlemaps>
     </ion-card>
   </div>
