--- a/src/app/c_camioneta/geolocalizacion/geolocalizacion.page.html
+++ b/src/app/c_camioneta/geolocalizacion/geolocalizacion.page.html
@@ -19,7 +19,7 @@
   </ion-card> -->
   
   <div class="center">
-    <ion-card style="width: 282px; height: 410px">
+    <ion-card class="tam-map">
       <app-googlemaps [localizacion]="localizacion" (enviar)="recibirData($event)" [feature]="feature"></app-googlemaps>
     </ion-card>
   </div>
