--- a/src/app/c_privado/geolocalizacion-llegada/geolocalizacion-llegada.page.html
+++ b/src/app/c_privado/geolocalizacion-llegada/geolocalizacion-llegada.page.html
@@ -25,7 +25,7 @@
   </ion-card>
   <ion-button (click)="registrarLlegada()" class="ion-padding boton-azul" expand="block">  &nbsp; &nbsp;Continuar</ion-button> -->
   <div class="center">
-    <ion-card style="width: 282px; height: 410px">
+    <ion-card class="tam-map">
       <app-googlemaps [localizacion]="localizacion" [feature] = "feature" (enviar)="recibirData($event)"></app-googlemaps>
     </ion-card>
   </div>
