--- a/src/app/c_privado/tab_inicio/inicio/inicio.page.html
+++ b/src/app/c_privado/tab_inicio/inicio/inicio.page.html
@@ -17,7 +17,7 @@
     <app-googlemaps [modal]="modal" [localizacion]="localizacion" [feature]="feature"></app-googlemaps>
   </ion-card> -->
   <div class="center">
-    <ion-card style="width: 282px; height: 410px">
+    <ion-card class="tam-map">
       <app-googlemaps [modal]="modal" [localizacion]="localizacion" [feature]="feature"></app-googlemaps>
     </ion-card>
   </div>
