--- a/src/app/consumidor/geolocalizacion-domicilio/geolocalizacion-domicilio.page.html
+++ b/src/app/consumidor/geolocalizacion-domicilio/geolocalizacion-domicilio.page.html
@@ -19,7 +19,7 @@
 </ion-card>
 <ion-button class="boton-warmi-in" expand="block" (click)="guardarGeolocalizacion()">  &nbsp; &nbsp;Continuar</ion-button> -->
 <div class="center">
-  <ion-card style="width: 282px; height: 410px">
+  <ion-card class="tam-map">
     <app-googlemaps [localizacion]="localizacion" [feature] = "feature" (enviar)="recibirData($event)"></app-googlemaps>
   </ion-card>
 </div>
