--- a/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.scss
+++ b/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.scss
@@ -13,7 +13,6 @@ ion-searchbar.search-bar {
 .contenedor-personas {
     width: 100%;
     height: 90%;
-
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -23,8 +22,7 @@ ion-searchbar.search-bar {
 .card {
     cursor: pointer;
     margin: 5px;
-    width: 250px;
-    height: 350px;
+    width: 140px;    
     border: 3px;
 }
 
@@ -39,8 +37,8 @@ ion-searchbar.search-bar {
 
 .detalle-personal {
     margin: 0;
-    width: 250px;
-    height: 180px;
+    // width: 250px;
+    // height: 180px;
     background: rgba(255, 255, 255, 0.800);
     display: flex;
     justify-content: center;
