--- a/src/app/consumidor/tab_agricultoras/modal-huerto-venta/modal-huerto-venta.page.html
+++ b/src/app/consumidor/tab_agricultoras/modal-huerto-venta/modal-huerto-venta.page.html
@@ -1,13 +1,29 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>{{type}}</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content>
-  
+<div class="contenedor-title-modal">
+  <div class="">
+    <div class="texto-title-modal">{{type}}</div>
+  </div>
+</div>
+
+<ion-content >
+  <div class="margen-content">
+    <div class="modal-name-user">{{name}}</div>
+    <div>{{description}}</div>
+    <div>
+      <ion-button class="boton-warmi-in" (click)="viewProfile()">Ver perfil</ion-button>
+    </div>
+  </div>
+</ion-content>
+
+<!-- <ion-content>
+
   <h3>{{name}}</h3>
   <h4>{{description}}</h4>
 
-  <ion-button (click)="viewProfile()">Ver perfil</ion-button>
-</ion-content>
+  <ion-button (click)="viewProfile()">Ver perfillllly</ion-button>
+</ion-content> -->
