--- a/src/app/consumidor/tab_agricultoras/productos/productos.page.scss
+++ b/src/app/consumidor/tab_agricultoras/productos/productos.page.scss
@@ -15,13 +15,12 @@
 }
 
 .bagde-style {
-    width: 45px;
-    height: 30px;
     background: var(--warmin-color-yellow);
-    color: #fff;
+    color: rgb(255, 255, 255);
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 5px;
+    margin-right: 30px;
     font-size: 20px;
     text-align: center;
 }
