--- a/src/app/consumidor/tab_inicio/inicio/inicio.page.html
+++ b/src/app/consumidor/tab_inicio/inicio/inicio.page.html
@@ -15,22 +15,17 @@
       <div class="texto-header">Ubicación</div>
     </div>
     <!-- Contenedor 2 -->
-    <div class="contenedor-title">
+    <!-- <div class="contenedor-title">
       <div>
         <h4 class="text-center size-text35px text-bold text-color-purple">Selecciona el lugar</h4>
       </div>
-    </div>
+    </div> -->
   </div>
   <div class="container-item-tipo-user">
-    <!-- <ion-row> -->
-    <!-- <ion-col style="margin-top: 8px;">
-      <ion-label class="color-text-purple bold-text">Seleccionaaa el lugar</ion-label> 
-    </ion-col>
-    <ion-col> -->
     <div>
       <ion-item lines="none" class="input-border-bot item-native-transparency">
-        <ion-label style=" color: var(--warmin-color-purple);" position="floating" class="texto-center text-bold">
-          Tipo de Usuario </ion-label>
+        <ion-label style=" color: var(--warmin-color-purple);" position="floating" class="text-bold">
+          Selecciona el lugar </ion-label>
         <ion-select interface="popover" class="border-option">
           <ion-select-option class="selec-text" value="apples">Centro de acopio</ion-select-option>
           <ion-select-option class="selec-text" value="oranges">Huertos familiares</ion-select-option>
@@ -47,7 +42,7 @@
   </ion-card> -->
 
   <div class="center">
-    <ion-card style="width: 282px; height: 410px">
+    <ion-card  class="tam-map">
       <app-googlemaps [modal]="modal" [localizacion]="localizacion" [feature]="feature"></app-googlemaps>
     </ion-card>
   </div>
