--- a/src/app/ma_lideresa/geolocalizacion/geolocalizacion.page.html
+++ b/src/app/ma_lideresa/geolocalizacion/geolocalizacion.page.html
@@ -21,7 +21,7 @@
     <app-googlemaps [localizacion]="localizacion" [feature] = "feature" (enviar)="recibirData($event)"></app-googlemaps>
   </ion-card> -->
   <div class="center">
-    <ion-card style="width: 282px; height: 410px">
+    <ion-card class="tam-map">
       <app-googlemaps [localizacion]="localizacion" [feature]="feature" (enviar)="recibirData($event)"></app-googlemaps>
     </ion-card>
   </div>
