--- a/src/app/ma_vendedora/componets/comercializacion/comercializacion.component.html
+++ b/src/app/ma_vendedora/componets/comercializacion/comercializacion.component.html
@@ -1,5 +1,5 @@
 <div class="center">
-  <ion-card style="width: 282px; height: 410px">
+  <ion-card class="tam-map">
     <app-googlemaps [feature] = "feature"></app-googlemaps>
   </ion-card>
 </div>
