--- a/src/app/ma_vendedora/componets/crear-notificacion/crear-notificacion.component.html
+++ b/src/app/ma_vendedora/componets/crear-notificacion/crear-notificacion.component.html
@@ -32,7 +32,7 @@
   </div>
 </div>
 <div class="center">
-  <ion-card style="width: 282px; height: 410px">
+  <ion-card class="tam-map">
     <app-googlemaps [localizacion]="localizacion" (enviar)="recibirData($event)" [feature]="feature"></app-googlemaps>
   </ion-card>
 </div>
