--- a/src/app/ma_vendedora/componets/notificaciones/notificaciones.component.html
+++ b/src/app/ma_vendedora/componets/notificaciones/notificaciones.component.html
@@ -3,7 +3,7 @@
 </ion-card> -->
 
 <div class="center">
-  <ion-card style="width: 282px; height: 410px">
+  <ion-card class="tam-map">
     <app-googlemaps [feature] = "feature" [modal]="modal"></app-googlemaps>
   </ion-card>
 </div>
