--- a/src/app/ma_vendedora/geolocalizacion-huerto/geolocalizacion-huerto.page.html
+++ b/src/app/ma_vendedora/geolocalizacion-huerto/geolocalizacion-huerto.page.html
@@ -22,7 +22,7 @@
   <ion-button class="boton-warmi-in" expand="block" (click)="continuar()">  &nbsp; &nbsp;Continuar</ion-button> -->
 
   <div class="center">
-    <ion-card style="width: 282px; height: 410px">
+    <ion-card class="tam-map">
       <app-googlemaps [localizacion]="localizacion" (enviar)="recibirData($event)" [feature] = "feature"></app-googlemaps>
     </ion-card>
   </div>
