--- a/src/app/ma_vendedora/geolocalizacion-venta/geolocalizacion-venta.page.html
+++ b/src/app/ma_vendedora/geolocalizacion-venta/geolocalizacion-venta.page.html
@@ -20,7 +20,7 @@
     <app-googlemaps [localizacion]="localizacion" (enviar)="recibirData($event)"></app-googlemaps>
   </ion-card> -->
   <div class="center">
-    <ion-card style="width: 282px; height: 410px">
+    <ion-card class="tam-map">
       <app-googlemaps  [localizacion]="localizacion" (enviar)="recibirData($event)"></app-googlemaps>
     </ion-card>
   </div>
