--- a/src/global.scss
+++ b/src/global.scss
@@ -300,7 +300,10 @@ ion-select::part(icon) {
 .card-tabs-bg {
   background: var(--warmin-color-yellow);
 }
-
+.tam-map{
+  width: 100%; 
+  height: 85vh;
+}
 // ion-header{
 //     text-align: center;
 //   }
@@ -330,14 +333,16 @@ ion-select::part(icon) {
   }
 
   &::part(handle) {
-    background: var(--ion-color-primary);
-    width: 150px;
-    height: 6px;
+    // background: var(--warmin-color-orange);
+    // width: 150px;
+    // height: 6px;
+    display: none;
   }
 
   &::part(content) {
     border-radius: 0px;
     box-shadow: 0px 0px 20px 5px rgb(0 0 0 / 32%);
+    height: 350px;
   }
 }
 
