--- a/src/app/login/registrarse/registrarse.page.html
+++ b/src/app/login/registrarse/registrarse.page.html
@@ -96,7 +96,7 @@
               </ion-label>
               <ion-select [multiple]="true" interface="popover" placeholder="Seleccione..."
                 [(ngModel)]="tipoAgricultora" [ngModelOptions]="{standalone: true}">
-                <ion-select-option value="Lideresa">Lideresa</ion-select-option>
+                <ion-select-option value="Lidereza">Lideresa</ion-select-option>
                 <ion-select-option value="Acopiadora">Acopiadora</ion-select-option>
                 <ion-select-option value="Vendedora">Vendedora</ion-select-option>
               </ion-select>
