--- a/src/app/ma_vendedora/componets/privado/privado.component.html
+++ b/src/app/ma_vendedora/componets/privado/privado.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<!-- <ion-content> -->
   <div class="border-top-page">
     <!-- Contenedor 1 -->
     <div class="contenedor-header">
@@ -12,8 +12,9 @@
       <h4 class="text-center size-text35px text-bold text-color-purple">Paradas de los autos privados</h4>
     </div>
   </div> -->
-
-  <ion-card style="width: 97%; height: 575px;">
-    <app-googlemaps [feature]="feature"></app-googlemaps>
-  </ion-card>
-</ion-content>
+  <div class="center">
+    <ion-card style="width: 282px; height: 410px">
+      <app-googlemaps  [modal]="modal"  [feature] = "feature"></app-googlemaps>
+    </ion-card>
+    </div>
+<!-- </ion-content> -->
