--- a/src/app/consumidor/tab_carrito/carrito/carrito.page.html
+++ b/src/app/consumidor/tab_carrito/carrito/carrito.page.html
@@ -7,7 +7,7 @@
       <div class="texto-header">Carrito de compra</div>
     </div>
   </div>
-  
+
   <div class="contenedor-total">
     <div class="datos">
       <div class="texto-carrito text-color-brown text-bold">Total a pagar</div>
@@ -47,70 +47,59 @@
         </ion-list>
       </ion-card-content>
     </ion-card>
-  
+
   </div>
   <div class="btn-ordenar">
-    
+
     <ion-button class="boton-warmi-in" id="open-modal" expand="block">Confirme canasta de compras</ion-button>
   </div>
 
   <ion-modal #modal trigger="open-modal" [presentingElement]="presentingElement">
     <ng-template>
-      <!-- <ion-header>
-        <ion-toolbar>
-        
-          <ion-buttons slot="end">
-            <ion-button (click)="modal.dismiss()">Cancelar</ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-header>
-      
-      <div class="border-top-page">
-        <div class="contenedor-header">
-          <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/store.svg">
-          </ion-icon>
-          <div class="texto-header">Carrito de compra</div>
-        </div>
-      </div> -->
       <ion-content>
-          <br>
-          <h4 class="text-center size-text35px text-bold text-color-purple">Selecciona el lugar de entrega</h4>
-          <form>
-        <ion-list>
-          
-              <ion-radio-group [(ngModel)]="place_delivery" name="place_delivery" mode="ios" value="Recogida en punto de venta">
-                <ion-item>
-                  <ion-label>Recogida en punto de venta</ion-label>
+        <br>
+        <div class="text-center size-text35px text-bold text-color-purple" style="margin-bottom: 10px;">Selecciona el lugar de entrega</div>
+        <form>
+          <ion-list >
+
+            <ion-radio-group [(ngModel)]="place_delivery" name="place_delivery" mode="ios"
+              value="Recogida en punto de venta">
+              <div class="contenedor-date">
+                <ion-item lines="none" style="--background:var(--warmin-color-yellow);width: 350px; border-top-left-radius: 10px; border-top-right-radius: 10px;">
+                  <ion-label style="font-weight: bold;">Recogida en punto de venta</ion-label>
                   <ion-radio slot="end" value="Recogida en punto de venta"></ion-radio>
                 </ion-item>
-            
-                <ion-item>
-                  <ion-label>Entrega en domicilio</ion-label>
+
+                <ion-item lines="none" style="--background:var(--warmin-color-yellow);width: 350px;">
+                  <ion-label style="font-weight: bold;">Entrega en domicilio</ion-label>
                   <ion-radio slot="end" value="Entrega en domicilio"></ion-radio>
                 </ion-item>
-            
-                <ion-item>
-                  <ion-label>Recogida en el huerto</ion-label>
+
+                <ion-item lines="none" style="--background:var(--warmin-color-yellow);width: 350px; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
+                  <ion-label style="font-weight: bold;">Recogida en el huerto</ion-label>
                   <ion-radio slot="end" value="Recogida en el huerto"></ion-radio>
                 </ion-item>
-    
-              </ion-radio-group>
-    
-          <ion-item>
-            <div class="ion-padding" style="text-align:center;">
-              <ion-label class="text-color-purple text-bold">Selecciona la fecha y hora de entrega:</ion-label>
-              <ion-datetime [(ngModel)]="deliverDate" name="deliverDate" minuteValues="0,15,30,45" hourValues="8,9,10,11,12,13,14,15,16">
-                <span slot="time-label">Hora</span>
-              </ion-datetime>
-            </div>
-          </ion-item>
+              </div>
+            </ion-radio-group>
+            <div class="contenedor-date" >
+            <ion-item lines="none">
+              <div class="ion-padding" style="text-align:center;">
+                <div class="text-color-purple text-bold">Selecciona la fecha y hora de entrega:</div>
+                <ion-datetime [(ngModel)]="deliverDate" name="deliverDate" minuteValues="0,15,30,45"
+                  hourValues="8,9,10,11,12,13,14,15,16">
+                  <span slot="time-label">Hora</span>
+                </ion-datetime>
+              </div>
+            </ion-item>
+          </div>
+          </ion-list>
+          <div class="btn-ordenar" style="padding: 5px;">
+            <ion-button type="submit" (click)="createOrder()" expand="block" class="boton-warmi-in">
+              <ion-icon name="card-outline"></ion-icon> Ordenar
+            </ion-button>
+          </div>
 
-        </ion-list>   
-<div class="btn-ordenar">
-          <ion-button type="submit" (click)="createOrder()" expand="block" class="boton-warmi-in"><ion-icon name="card-outline"></ion-icon> Ordenar</ion-button>
-        </div>
-        
-      </form>
+        </form>
       </ion-content>
     </ng-template>
   </ion-modal>
