--- a/src/app/consumidor/tab_carrito/carrito/carrito.page.scss
+++ b/src/app/consumidor/tab_carrito/carrito/carrito.page.scss
@@ -1,74 +1,10 @@
-// .contenedortotal {
-//     display: flex;
-//     width: 100%;
-//     height: 60px;
-//     background: var(--warmin-color-orange);
-//     margin-top: 5px;           
-// }
-
-// .total {
-//     // background: yellow;
-//     width: 50%;
-//     height: 35px;
-//     margin: 12px;
-//     padding: 5px;
-//     text-align: center;
-//     font-size: 20px;
-// }
-
-// .precio {
-//     background: #fff;
-//     width: 50%;
-//     height: 35px;
-//     margin: 12px;
-//     padding: 5px;
-//     text-align: center; 
-//     border-radius: 20px 2px 20px 2px;
-//     font-size: 20px;
-
-// }
-// img{
-//     border-radius: 4px;
-//     width: 100%;
-//     height: 100%;
-// }
-
-// .items {
-//     display: flex;
-//     flex-direction: row;
-//     // justify-content: center;
-//     align-items: center;
-// }
-
-// ion-list{
-//     margin: 0;
-//     padding: 0;
-// }
-
-// ion-card-content{
-// // margin: 30;
-// padding: 5px;
-// }
-
-// ion-card-header{
-//     padding: 7px;
-//     margin: 0;
-// }
-
-// ion-card-title{
-//     padding: 0;
-// }
-// ion-card-subtitle{
-//     padding: 0;
-//     margin: 0;
-// }
-
-// .btn-ordenar{
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-// }
-
+.contenedor-date{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 
 .contenedor-total{
     width: 100%;
