--- a/src/app/ma_vendedora/componets/privado/privado.component.html
+++ b/src/app/ma_vendedora/componets/privado/privado.component.html
@@ -12,8 +12,9 @@
       <h4 class="text-center size-text35px text-bold text-color-purple">Paradas de los autos privados</h4>
     </div>
   </div> -->
-
+<div class="center">
   <ion-card class="tam-map">
     <app-googlemaps [modal]="modal" [feature]="feature"></app-googlemaps>
   </ion-card>
-</ion-content>
+</div>
+<!-- </ion-content> -->
