--- a/src/app/ma_vendedora/modals/modal-noticias/modal-noticias.page.html
+++ b/src/app/ma_vendedora/modals/modal-noticias/modal-noticias.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>{{title}}</ion-title>
   </ion-toolbar>
@@ -7,4 +7,22 @@
 <ion-content>
       <h2>{{date}}</h2>
       <h2>{{description}}</h2>
+</ion-content> -->
+
+<div class="contenedor-title-modal">
+  <div class="">
+    <div class="texto-title-modal">{{title}}</div>
+  </div>
+</div>
+
+<ion-content >
+  <div class="margen-content">
+    <div class="modal-name-user">{{date}}</div>
+    <div>{{description}}</div>
+    
+
+    <!-- <div>
+      <ion-button class="boton-warmi-in" (click)="viewProfile()">Ver perfisssss</ion-button>
+    </div> -->
+  </div>
 </ion-content>
