--- a/src/app/ma_acopiadora/modals/acopio-modal/acopio-modal.page.html
+++ b/src/app/ma_acopiadora/modals/acopio-modal/acopio-modal.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>{{name}}</ion-title>
   </ion-toolbar>
@@ -8,4 +8,22 @@
 <h2>{{description}}</h2>
 <h2>{{days}}</h2>
 <h2>{{hours}}</h2>
+</ion-content> -->
+
+<div class="contenedor-title-modal">
+  <div class="">
+    <div class="texto-title-modal">{{name}}</div>
+  </div>
+</div>
+
+<ion-content >
+  <div class="margen-content">
+    <div class="modal-name-user">{{description}}</div>
+    <div>{{days}}</div>
+    <div>{{hours}}</div>
+
+    <!-- <div>
+      <ion-button class="boton-warmi-in" (click)="viewProfile()">Ver perfisssss</ion-button>
+    </div> -->
+  </div>
 </ion-content>
