--- a/src/app/ma_vendedora/modals/modal-camioneta/modal-camioneta.page.html
+++ b/src/app/ma_vendedora/modals/modal-camioneta/modal-camioneta.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>{{type}}</ion-title>
   </ion-toolbar>
@@ -8,5 +8,23 @@
     <h2>{{name}}</h2>
     <h2>{{description}}</h2>
 
-    <ion-button [routerLink]="['/ma_vendedora/menu/transporte/perfil-conductor', id]">Ver perfil</ion-button>
+    <ion-button [routerLink]="['/ma_vendedora/menu/transporte/perfil-conductor', id]">Ver perfilggg</ion-button>
+</ion-content> -->
+
+
+
+<div class="contenedor-title-modal">
+  <div class="">
+    <div class="texto-title-modal">{{type}}</div>
+  </div>
+</div>
+
+<ion-content >
+  <div class="margen-content">
+    <div class="modal-name-user">{{name}}</div>
+    <div>{{description}}</div>
+    <div>
+      <ion-button [routerLink]="['/ma_vendedora/menu/transporte/perfil-conductor', id]">Ver perfil</ion-button>
+    </div>
+  </div>
 </ion-content>
