--- a/src/app/ma_vendedora/modals/modal-notificaciones/modal-notificaciones.page.scss
+++ b/src/app/ma_vendedora/modals/modal-notificaciones/modal-notificaciones.page.scss
@@ -1,15 +1,15 @@
-.titulo-fondo-emergencia{
-    --background: #fb6767;
-    text-align: center;
-    color: whitesmoke;
-    }
-.titulo-fondo-alerta{
-    --background: #fbfb67;
-    text-align: center;
+// .titulo-fondo-emergencia{
+//     --background: #fb6767;
+//     text-align: center;
+//     color: whitesmoke;
+//     }
+// .titulo-fondo-alerta{
+//     --background: #fbfb67;
+//     text-align: center;
         
-    }
-.titulo-fondo-informativa{
-        --background: #6986f1;
-        text-align: center;
+//     }
+// .titulo-fondo-informativa{
+//         --background: #6986f1;
+//         text-align: center;
             
-    }
+//     }
